testsuite/tests/properties/invalid_external/invalid_memoized/test.lkt
from common import FooNode

class Example: FooNode {
    @exported @external() @memoized fun p(): Bool
}
